# santa

./: .changie.yaml  .commitlintrc.json  .editorconfig  .gitattributes  .gitignore  .release-plz.toml  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  CHANGELOG.md  CI_PIPELINE_REVIEW.md  CLAUDE.md  CLAUDE_CODE_REVIEW.md  CONSOLIDATED_IMPROVEMENT_PLAN.md  CONTRIBUTING.md  CRITICAL_IMPROVEMENTS_PLAN.md  Cargo.toml  Cross.toml  DEV.md  DEVELOPMENT.md  LICENSE  MODERNIZATION_PLAN.md  README.md  SECURITY.md  cleanup-releases.sh  code_analysis_report.md  codecov.yml  commit-types.json  deny.toml  dist-workspace.toml  elves.yaml  hk.pkl  justfile  mise.toml  npm.json  release-plz.toml  santa-config.yaml  santa-data.yaml  santa-packages.yaml  santa.code-workspace  santa_install_20260328_031240.sh  (+1 more)
.changes/santa/: v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.4.0.md
.changes/santa-data/: v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.5.0.md
.changes/sickle/: v0.1.3.md  v0.1.4.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
.changes/unreleased/: santa-Security-20260421-214021.yaml  (+32 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml  membrowse-targets.json
.serena/: project.yml
benches/: subprocess_performance.rs
claudedocs/: ccl-test-fixing-prompt.md  status_performance_analysis.md  test-failures-analysis.md  uninstall-implementation-plan.md
crates/ccl-parser/: Cargo.toml
crates/ccl-parser/src/: lib.rs  parser.rs
crates/santa-cli/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/santa-cli/data/: known_packages.ccl  known_packages.ccl.old  package_schema.yaml  packages.ccl  santa-config.ccl  sources.ccl
crates/santa-cli/data/discovery/: .gitignore
crates/santa-cli/data/sources/: apt.ccl  arch.ccl  aur.ccl  brew.ccl  cargo.ccl  dnf.ccl  flathub.ccl  nix.ccl  npm.ccl  pacman.ccl  scoop.ccl  winget.ccl
crates/santa-cli/src/: catalog.rs  commands.rs  completions.rs  configuration.rs  data.rs  data_layers.rs  errors.rs  init.rs  lib.rs  main.rs  migration.rs  output.rs  plugins.rs  script_generator.rs  source_layers.rs  sources.rs  tests.rs  traits.rs
crates/santa-cli/src/commands/: tests.rs
crates/santa-cli/src/configuration/: env.rs  watcher.rs
crates/santa-cli/src/data/: constants.rs  example_simple_packages.ccl  known_packages.ccl  loaders.rs  santa-config.ccl  schemas.rs  sources.ccl
crates/santa-cli/src/sources/: traits.rs
crates/santa-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/santa-cli/templates/: install.ps1.tera  install.sh.tera
crates/santa-cli/tests/: integration_tests.rs  property_tests.rs
crates/santa-cli/tests/e2e/: config_tests.rs  error_snapshot_tests.rs  error_tests.rs  init_tests.rs  mod.rs  name_resolution_tests.rs  status_tests.rs  tier1_manager_tests.rs  tier2_smoke_tests.rs
crates/santa-cli/tests/integration/: cache_behavior.rs  command_execution.rs  config_hot_reload.rs  mod.rs
crates/santa-data/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
crates/santa-data/src/: config.rs  lib.rs  models.rs  schemas.rs
crates/santa-data/tests/: integration_tests.rs  models_tests.rs  parser_tests.rs  schemas_tests.rs
crates/sickle/: CHANGELOG.md  Cargo.toml  README.md  REGISTRY.md  cliff.toml
crates/sickle-cli/: Cargo.toml
crates/sickle-cli/src/: bridge.rs  input.rs  main.rs
crates/sickle-cli/src/commands/: convert.rs  fmt.rs  mod.rs  parse.rs  validate.rs  view.rs
crates/sickle-cli/tests/: bridge_tests.rs  cli_tests.rs
crates/sickle-cli/tests/fixtures/: sample.ccl
crates/sickle/data/: ccl-features.toml  ccl-registry.toml
crates/sickle/docs/: capabilities.md
crates/sickle/examples/: basic_parsing.rs  serde_usage.rs
crates/sickle/scripts/: generate_capabilities.py  generate_registry.py
crates/sickle/src/: de.rs  document.rs  error.rs  lib.rs  model.rs  options.rs  pacman.rs  parser.rs  printer.rs  reader.rs  ser.rs
crates/sickle/tests/: capabilities.rs  data_driven_tests.rs  document_tests.rs  integration_tests.rs  test_helpers.rs
crates/sickle/tests/common/: mod.rs
crates/sickle/tests/test_data/: .gitignore  README.md  api_advanced_processing.json  api_comments.json  api_core_ccl_hierarchy.json  api_core_ccl_integration.json  api_core_ccl_model.json  api_core_ccl_parsing.json  api_edge_cases.json  api_errors.json  api_filter_predicates.json  api_fuzz_special_chars_seed1.json  api_fuzz_special_chars_seed42.json  api_fuzz_special_chars_seed49.json  api_fuzz_special_chars_seed99.json  api_list_access.json  api_proposed_behavior.json  api_reference_compliant.json  api_typed_access.json  api_whitespace_behaviors.json  capabilities.md  property_algebraic.json  property_round_trip.json
data/: config_schema.yaml  elves.yaml  example_simple_packages.ccl  known_packages.ccl  known_packages.conf  known_packages.kdl  known_packages.ron  known_packages.yaml  santa-config.ccl  santa-config.conf  santa-config.kdl  santa-config.ron  santa-config.yaml  santa-data.yaml  sources.ccl  sources.conf  sources.kdl  sources.ron  sources.yaml  sources_schema.yaml
docs/: API.md  QUICK_REFERENCE.md  README.md  USER_GUIDE.md  cli-reference.md  configuration.md  package-format.md  troubleshooting.md  user-guide.md
metrics/: binary-size.txt  bloat-sickle.txt  bloat.txt
scripts/: .gitignore  README.md  analyze-binary-size.sh  binary-size-diff.py  check-configs-sync.py  cli_tools_with_installs.json  collect-packages.py  collect_all.py  crossref_packages.py  generate-cliff-configs.py  generate-commitlint-config.py  generate_ccl.py  justfile  models.py  pyproject.toml  ruff.toml  validate_data.py  verify_packages.py
scripts/collectors/: __init__.py  arch.py  aur.py  awesome_cli_apps.py  base.py  flathub.py  homebrew.py  modern_unix.py  scoop.py  toolleeo.py
src/: commands.rs  completions.rs  configuration.rs  data.rs  elves.rs  errors.rs  lib.rs  main.rs  migration.rs  plugins.rs  script_generator.rs  sources.rs  tests.rs  traits.rs  util.rs
templates/: check.ps1.tera  check.sh.tera  install.ps1.tera
test-config/: elves.yaml
tests/: integration_tests.rs  property_tests.rs  security_tests.rs
(+39 files in other folders)
