[workspace]
resolver = "2"
members = [
    "crates/santa-cli",
    "crates/santa-data",
    "crates/sickle",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
authors = ["Tyler Butler <tyler@tylerbutler.com>"]
license = "MIT"
repository = "https://github.com/tylerbutler/santa"
rust-version = "1.80.0"
categories = ["command-line-utilities", "development-tools"]
keywords = ["package-manager", "cli", "cross-platform", "automation"]
readme = "README.md"

[workspace.dependencies]
# Error handling
anyhow = "1.0.101"
thiserror = "1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde-enum-str = "0.2.5"

# CLI
clap = { version = "4.5", features = ["color", "derive", "cargo", "wrap_help"] }
clap_complete = "4.5"
colored = "3"
dialoguer = "0.11.0"

# Async
tokio = { version = "1.49", features = ["process", "rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
config = { version = "0.15", default-features = false, features = ["toml"] }
directories = "4.0"
which = "4.4"
derive_more = "0.99"
derive_builder = "0.12"
validator = { version = "0.20", features = ["derive"] }
tabular = "0.2.0"
moka = { version = "0.12", features = ["sync", "logging"] }
notify = "6.1"
shell-escape = "0.1"
shlex = "1.3"
minijinja = "2"
powershell_script = "1.1"
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (lightweight, minimal deps)
minreq = { version = "2.14", features = ["https-rustls"] }

# Dev dependencies
rstest = "0.18"
tempfile = "3.24"
proptest = "1.8"
mockall = "0.12"
assert_cmd = "2.1"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[profile.release]
lto = true
strip = true

[profile.dist]
inherits = "release"
lto = "thin"

[profile.bloat]
inherits = "release"
panic = "unwind"
