[project]
name = "cli-tool-harvester"
version = "0.1.0"
description = "Harvest and normalize CLI tools from curated sources"
authors = [{ name = "Tyler" }]
requires-python = ">=3.8"

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]
