[package]
name = "ccl-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "A simple CCL (Categorical Configuration Language) parser with support for arrays and objects"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_ccl = "0.1.1"

[dev-dependencies]
rstest = { workspace = true }
