[package]
name = "santa-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Data models and CCL parser for Santa package manager"
categories = ["data-structures", "parser-implementations", "development-tools"]
keywords = ["ccl", "package-data", "santa", "configuration"]
documentation = "https://docs.rs/santa-data"
readme.workspace = true
publish = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
serde_ccl = "0.1.1"
serde-enum-str = { workspace = true }
derive_more = { workspace = true }
