[package]
name = "sickle-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tool for working with CCL files"
publish = false

[dependencies]
sickle = { path = "../sickle", features = ["full"] }
clap = { version = "4.5", features = ["color", "derive", "wrap_help"] }
serde_json.workspace = true
serde = { workspace = true }
toml = "0.8"
colored.workspace = true
anyhow.workspace = true
dialoguer.workspace = true

[[bin]]
name = "sickle"
path = "src/main.rs"
