[package]
name = "sickle"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A robust Rust parser for CCL (Categorical Configuration Language) with Serde support"
homepage = "https://github.com/tylerbutler/santa"
repository.workspace = true
rust-version.workspace = true
keywords = ["ccl", "config", "parser", "categorical", "configuration"]
categories = ["config", "parser-implementations"]
readme = "README.md"

[features]
# Default features - insertion-order list iteration (proposed CCL spec behavior)
default = ["serde", "list_coercion_disabled"]

# Core parsing features
serde = ["dep:serde", "dep:serde_derive"]
intern = ["dep:string-interner"]

# List behavior modes (mutually exclusive)
list_coercion_disabled = []  # get_list() only works with bare lists (empty keys), matches reference implementation
list_coercion_enabled = []   # get_list() coerces duplicate keys into lists (non-reference behavior)

# Reference implementation compatibility (opt-in for compatibility testing)
# Note: Reverses duplicate-key list order to match reference implementation
# Most users should NOT enable this - use insertion-order behavior (default)
reference_compliant = []

# Advanced parsing features (future)
# section-headers = []      # Support == Section == style headers
# typed-access = []         # Convenience methods: get_string, get_int, get_bool
# list-indexing = []        # Advanced list operations and indexing

[dependencies]
# Data structures - IndexMap for insertion-order preservation
indexmap = { version = "2.0", features = ["serde"] }

# Optional: Serde support for deserialization
serde = { workspace = true, optional = true }
serde_derive = { version = "1.0", optional = true }

# Optional: String interning for memory efficiency
string-interner = { version = "0.17", optional = true }

[dev-dependencies]
# Testing framework
serde_json.workspace = true

[[example]]
name = "basic_parsing"
path = "examples/basic_parsing.rs"

[[example]]
name = "serde_usage"
path = "examples/serde_usage.rs"
required-features = ["serde"]
