[package]
name = "sickle"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A robust Rust parser for CCL (Categorical Configuration Language) with Serde support"
homepage = "https://github.com/tylerbutler/santa"
repository.workspace = true
rust-version.workspace = true
keywords = ["ccl", "config", "parser", "categorical", "configuration"]
categories = ["config", "parser-implementations"]
readme = "README.md"

[lib]
crate-type = ["rlib", "dylib"]

[features]
# Default features - includes only essential functionality
# Users opt-in to additional features as needed
default = []


# Core parsing - parse CCL to flat key-value entries
parse = []

# Hierarchy building - build hierarchical CclObject from entries (includes parse)
hierarchy = ["parse"]

# Serde deserialization: CCL string -> Rust types (includes hierarchy)
serde-deserialize = ["hierarchy", "dep:serde", "dep:serde_derive"]

# CCL printer - serialize CclObject back to canonical CCL text (includes hierarchy)
printer = ["hierarchy"]

# Serde serialization: Rust types -> CCL string (includes printer)
serde-serialize = ["printer", "dep:serde", "dep:serde_derive"]

# Both serde serialization and deserialization
serde = ["serde-deserialize", "serde-serialize"]

# String interning for memory efficiency with large configs
intern = ["dep:string-interner"]

# Reference implementation compatibility (opt-in for compatibility testing)
# Note: Reverses duplicate-key list order to match reference implementation
# Most users should NOT enable this - use insertion-order behavior (default)
reference_compliant = []

# All features enabled
full = ["serde", "printer", "intern"]

# Unstable APIs - exposes internal functions for testing/experimentation
# These APIs may change without notice
unstable = []

# Advanced parsing features (future)
# section-headers = []      # Support == Section == style headers
# typed-access = []         # Convenience methods: get_string, get_int, get_bool
# list-indexing = []        # Advanced list operations and indexing

[dependencies]
# Data structures - IndexMap for insertion-order preservation
indexmap = { version = "2.12.1", features = ["serde"] }

# Optional: Serde support for deserialization
serde = { workspace = true, optional = true }
serde_derive = { version = "1.0.228", optional = true }

# Optional: String interning for memory efficiency
string-interner = { version = "0.19.0", optional = true }

[dev-dependencies]
# Testing framework
serde.workspace = true
serde_json.workspace = true
colored.workspace = true

# Enable all features for tests
[dev-dependencies.sickle]
path = "."
features = ["full", "unstable"]

[[example]]
name = "basic_parsing"
path = "examples/basic_parsing.rs"

[[example]]
name = "serde_usage"
path = "examples/serde_usage.rs"
required-features = ["serde"]
